<resources>
    <string name="app_name">知乎日报</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">我的设置</string>
    <string name="title_activity_splash">SplashActivity</string>


    <string name="app_loading_name">Material Design\n之\n知乎日报</string>
    <string name="app_home">首页</string>
    <string name="offline_download">离线下载</string>
    <string name="my_setting">我的设置</string>
    <string name="default_num">...</string>

    <string name="network_error">请检查网络连接</string>


    <color name="indicator_white">#AAA</color>
    <color name="window_background">#DDD</color>
    <color name="orange">#FF9900</color>
    <color name="green">#009900</color>
    <color name="blue">#000099</color>
    <color name="half_black">#8F000000</color>
    <color name="hard_black">#AF000000</color>
    <color name="theme_back">#D5D5D5</color>
    <color name="colorPrimary">#0893AD</color>
    <color name="card_back">#EEE</color>
    <color name="text_color">#333</color>
    <color name="text_read_color">#666</color>

    <color name="half_primary">#8F0893AD</color>
    <color name="hard_primary">#AF0893AD</color>
    <string name="title_activity_content">ContentActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="title_activity_setting">SettingActivity</string>


    <string name="normal_set">常规</string>
    <string name="auto_download">自动离线下载</string>
    <string name="auto_download_tips">仅在wifi下可用，自动下载最新内容</string>
    <string name="no_picture">无图模式</string>
    <string name="no_picture_tips">2G/3G网络下不下载图片</string>
    <string name="other_set">其他</string>
    <string name="clear_cache">清除缓存</string>
    <string name="version_check">版本检查</string>
    <string name="clear_success">清除成功</string>
    <string name="version_latest">最新版本</string>
    <string name="mode_night">夜间模式</string>
    <string name="mode_day">日间模式</string>

    <string name="other_editor">主编</string>

</resources>
