<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:key="normal_set"
        android:title="@string/normal_set">

        <CheckBoxPreference android:key="auto_download"
            android:title="@string/auto_download"
            android:summary="@string/auto_download_tips"/>

        <CheckBoxPreference android:key="no_picture"
            android:title="@string/no_picture"
            android:summary="@string/no_picture_tips"
            android:shadowColor="?attr/colorPrimary"/>
    </PreferenceCategory>

    <PreferenceCategory android:key="other_set"
        android:title="@string/other_set">

        <Preference android:key="clear_cache"
            android:title="@string/clear_cache"/>

        <Preference android:key="version_check"
            android:title="@string/version_check"/>

    </PreferenceCategory>
</PreferenceScreen>